--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -4,9 +4,9 @@ on:
   release:
     types: [published]
   workflow_call:
-    secrets:
-      PYPI_TOKEN:
-        required: true
+    # secrets:
+    #   PYPI_TOKEN:
+    #     required: true
 permissions:
   contents: read
 
@@ -21,7 +21,7 @@ jobs:
 
       - uses: actions/setup-python@v5
         with:
-          python-version: "3.13"
+          python-version: "3.13.1"
           allow-prereleases: false
 
       - name: Install dependencies
@@ -65,5 +65,5 @@ jobs:
         uses: pypa/gh-action-pypi-publish@ed0c53931b1dc9bd32cbe73a98c7f6766f8a527e # 1.13.0
         with:
           packages-dir: dist/
-          user: __token__
-          password: ${{ secrets.PYPI_TOKEN }}
+          # user: __token__
+          # password: ${{ secrets.PYPI_TOKEN }}
